cleanup for wsgi

--- a/views/editpage.html
+++ b/views/editpage.html
@@ -1,5 +1,6 @@
-<form action="lib/py/objstore.py" method="post">
+<form action="server/" method="post">
 	<div class="clearfix">
+		<input type="hidden" name="method" value="lib.py.objstore.post" />
 		<input type="hidden" name="type" value="page" />
 		<input type="text" name="label" />
 		<span class="help-block">Title</span>
