more testing for wsgi changes

--- a/views/signin.html
+++ b/views/signin.html
@@ -43,7 +43,7 @@ $('#signin button.btn.primary').click(function() {
 		}
 	});
 	
-	params.method = 'lib.py.session.get';
+	params._method = 'lib.py.session.login';
 
 	// check login
 	if(params.user && params.password) {
