--- a/views/upload.html
+++ b/views/upload.html
@@ -7,7 +7,7 @@
 	<div class="modal-body">
 		<form class="form-stacked" method="POST" action="server/" enctype="multipart/form-data">
 			<input name="mimetype" type="hidden" value="json">
-			<input name="method" type="hidden" value="lib.py.files.post">
+			<input name="_method" type="hidden" value="lib.py.files.post">
 			<div class="clearfix">
 				<input name="filedata" type="file" />
 			</div>
