--- a/css/style_template.css
+++ b/css/style_template.css
@@ -21,3 +21,12 @@ textarea.code {
 .content.active {
 	display: block;
 }
+
+/* form */
+.form-footer {
+	margin-top: 17px;
+}
+.form-footer .btn {
+	float: right;
+	margin-left: 5px;
+}
