fixed forgot password and added markdown in email

--- a/views/user/forgot_password.html
+++ b/views/user/forgot_password.html
@@ -17,9 +17,12 @@ var forget_password = new FormView({
 	fields: [
 		{name:'email', label:'Username or Email id', mandatory:true}
 	],
-	btn_primary_label: 'Send Link',
-	success: function() {
-		
+	primary_btn_label: 'Send Link',
+	primary_btn_working_label: 'Sending...',
+	success: function(data) {
+		if(data.message && data.message=='ok') {
+			$.view.open('#forgot_password_done');			
+		}
 	}
 });
 
