--- a/views/user/reset_password.html
+++ b/views/user/reset_password.html
@@ -12,6 +12,8 @@ app.make_reset_password_form = function() {
 	$.require('lib/views/form/form.js');
 	var reset_form = new FormView({
 		$parent: $('#reset_form_wrapper'),
+		primary_btn_label: 'Update Password',
+		primary_btn_working_label: 'Updating...',
 		fields: [
 			{name:'password', type:'password', mandatory:true, 
 				label: 'Enter New Password', min_length: 6, 
@@ -24,7 +26,9 @@ app.make_reset_password_form = function() {
 			requestid: location.hash.split('/').slice(-1)
 		},
 		success: function(data) {
-			this.set_message('Password updated!')
+			if(data.message && data.message=='ok') {
+				$.view.open('#reset_password_done');				
+			}
 		}
 	});
 	// passwords must be same
