--- a/views/user/reset_password.html
+++ b/views/user/reset_password.html
@@ -14,6 +14,7 @@ app.make_reset_password_form = function() {
 		$parent: $('#reset_form_wrapper'),
 		primary_btn_label: 'Update Password',
 		primary_btn_working_label: 'Updating...',
+		submit_from_last_input: true,
 		fields: [
 			{name:'password', type:'password', mandatory:true, 
 				label: 'Enter New Password', min_length: 6, 
