--- a/views/user/forgot_password.html
+++ b/views/user/forgot_password.html
@@ -19,6 +19,7 @@ var forget_password = new FormView({
 	],
 	primary_btn_label: 'Send Link',
 	primary_btn_working_label: 'Sending...',
+	submit_from_last_input: true,
 	success: function(data) {
 		if(data.message && data.message=='ok') {
 			$.view.open('#forgot_password_done');			
