--- a/views/user/userlist.html
+++ b/views/user/userlist.html
@@ -39,34 +39,38 @@ $('#btn-new-profile').click(function() {
 
 
 // get list of pages
-$.getJSON('session/', {"method":"lib.py.query.get", "json": JSON.stringify({
-		type:"user", 
-		columns:"name, full_name, email, is_admin",
-		order_by: "full_name asc"
-	})}, function(data) {
-
-	// render
-	$.each(data.result, function(i, user) {
-		if(!user.full_name) user.full_name = user.name;
-		if(!user.email) user.email = '[not set]';
-		$('#userlist-table tbody').append($.rep('<tr>\
-			<td>\
-				<b>%(full_name)s</b></a>\
-				<div class="help-block">id: %(name)s | email: %(email)s</div>\
-			</td>\
-			<td><input type="checkbox" />\
-				<span class="check-help">Set as admin</span></td>\
-			<td><button data-name="%(name)s" class="btn small delete-row-btn">Delete</button></td>\
-			</tr>', user));
+$.call({
+	method:"lib.py.query.get", 
+	data: {
+		json: JSON.stringify({
+				type:"user", 
+				columns:"name, fullname, email",
+				order_by: "fullname asc"
+			})
+	},
+	success: function(data) {
+		// render
+		$.each(data.result, function(i, user) {
+			if(!user.fullname) user.fullname = user.name;
+			if(!user.email) user.email = '[not set]';
+			$('#userlist-table tbody').append($.rep('<tr>\
+				<td>\
+					<b>%(fullname)s</b></a>\
+					<div class="help-block">id: %(name)s | email: %(email)s</div>\
+				</td>\
+				<td><input type="checkbox" />\
+					<span class="check-help">Set as admin</span></td>\
+				<td><button data-name="%(name)s" class="btn small delete-row-btn">Delete</button></td>\
+				</tr>', user));
 			
-		$tr = $('#userlist-table tbody tr:last');
-		// disable current user
-		if(user.name==$.session.user) {
-			$tr.find(':input').attr('disabled', true);
-			$tr.find('.check-help').css('color','#777');
-		}
-	});
-	
+			$tr = $('#userlist-table tbody tr:last');
+			// disable current user
+			if(user.name==$.session.user) {
+				$tr.find(':input').attr('disabled', true);
+				$tr.find('.check-help').css('color','#777');
+			}
+		});
+	}
 });
 
 </script>
