--- a/views/pagelist.html
+++ b/views/pagelist.html
@@ -9,6 +9,16 @@ $.require('lib/js/prettydate.js');
 var PageListView = ObjListView.extend({
 	make: function() {
 		this._super();
+		
+		// new btn
+		this.$w.find('.objlist-search-btn').parent()
+			.append('<button class="btn primary objlist-new-btn">New</button>');
+			
+		this.$w.find('.objlist-new-btn').click(function() {
+			$.view.open('editpage');
+		});
+		
+		// edit action
 		this.$b.delegate('button.editpage-btn','click',function() {
 			$.view.open('editpage/' + $(this).attr('data-name'));
 		});
