--- a/css/style_template.css
+++ b/css/style_template.css
@@ -1,17 +1,35 @@
-/*additional*/
 body {
 	color: #202020;
-	padding-top: 40px; /* for topbar */
+	padding-top: 60px;
+}
+
+li {
+	color: #404040;
+}
+
+section {
+	padding-top: 60px;
+}
+
+.label {
+  font-size: 10.75px;	
 }
 
 textarea.code {
 	font-family: Monaco, Courier, Mono; 
-	width: 640px;
 	height: 20em;
 }
 
-.outer {
-	margin-top: 17px;
+.shadow {
+	-moz-box-shadow: 0px 1px 2px #aaa;
+	-webkit-box-shadow: 0px 1px 2px #aaa;
+ 	box-shadow: 0px 1px 2px #aaa;
+}
+
+.round {
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;	
 }
 
 .content {
@@ -26,4 +44,22 @@ textarea.code {
 	margin-right: 8px; 
 	float:right; 
 	margin-top: 6px;
+}
+
+.item-box {
+	padding: 0px 11px;
+	margin-bottom: 11px;
+	background-color: #f8f8f8;
+	border: 1px solid #ddd;
+}
+
+.item-box-item {
+	padding-bottom: 7px;
+}
+
+/* form */
+
+/* for sidebox */
+form .clearfix:after {
+	clear: none !important;
 }
