--- a/css/style.css
+++ b/css/style.css
@@ -57,9 +57,29 @@ textarea.code {
 	padding-bottom: 7px;
 }
 
+code {
+	background-color: transparent !important; 
+}
+
 /* form */
 
 /* for sidebox */
 form .clearfix:after {
 	clear: none !important;
+}
+
+/* Footer
+-------------------------------------------------- */
+.footer {
+  background-color: #eee;
+  min-width: 940px;
+  padding: 30px 0;
+  text-shadow: 0 1px 0 #fff;
+  border-top: 1px solid #e5e5e5;
+  -webkit-box-shadow: inset 0 5px 15px rgba(0,0,0,.025);
+     -moz-box-shadow: inset 0 5px 15px rgba(0,0,0,.025);
+/*          box-shadow: inset 0 5px 15px rgba(0,0,0,.025);
+*/}
+.footer p {
+  color: #555;
 }
