--- a/views/filelist.html
+++ b/views/filelist.html
@@ -1,4 +1,4 @@
-<button class="btn primary small" onclick="location.href='#upload'" style="float: right">
+<button class="btn primary small" onclick="app.show_upload();" style="float: right">
 	New</button>
 <h2>Files</h2>
 <br>
@@ -16,14 +16,15 @@
 // get list of pages
 $.require('lib/js/prettydate.js');
 $.require('lib/js/common.js');
+$.require('lib/views/upload.js');
 
 // delete
 $("#filelist").delete_table_row({
-	method:'lib.py.files.delete'
+	method:'lib.chai.files.delete'
 });
 
 $.call({
-	method:'lib.py.files.filelist', 
+	method:'lib.chai.files.filelist', 
 	success: function(data) {
 		// no pages?
 		if(!data.files.length) {
@@ -37,7 +38,7 @@ $.call({
 		$.each(data.files, function(i, f) {		
 			$('#filelist_table tbody').append($.rep('<tr>\
 				<td>\
-					<a href="files/%(name)s" target="_blank"><b>files/%(name)s</b></a>\
+					<a href="%(name)s" target="_blank"><b>%(name)s</b></a>\
 					<div class="help-block">%(size)sk | %(ts)s</div>\
 				</td>\
 				<td><button data-name="%(name)s" class="btn small delete-row-btn">Delete</button></td>\
