--- a/views/user/forgot_password.html
+++ b/views/user/forgot_password.html
@@ -22,7 +22,7 @@ var forget_password = new FormView({
 	submit_from_last_input: true,
 	success: function(data) {
 		if(data.message && data.message=='ok') {
-			$.view.open('#forgot_password_done');			
+			chai.view.open('#forgot_password_done');			
 		}
 	}
 });
