--- a/views/user/reset_password.html
+++ b/views/user/reset_password.html
@@ -28,7 +28,7 @@ app.make_reset_password_form = function() {
 		},
 		success: function(data) {
 			if(data.message && data.message=='ok') {
-				$.view.open('#reset_password_done');				
+				chai.view.open('#reset_password_done');				
 			}
 		}
 	});
