--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
-	color: #202020;
-	padding-top: 60px;
+	background-color: #eee;
 }
 
 li {
@@ -11,12 +10,15 @@ section {
 	padding-top: 60px;
 }
 
+.container {
+	width: 940;
+}
+
 .label {
   font-size: 10.75px;	
 }
 
 textarea.code {
-	font-family: Monaco, Courier, Mono; 
 	height: 20em;
 }
 
@@ -32,11 +34,55 @@ textarea.code {
 	border-radius: 4px;	
 }
 
-.content {
+.container > .row {
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+	margin-top: 60px;
+
+	background-color: #f9f9f9;
+	-webkit-box-shadow: -2px -2px 20px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: -2px -2px 20px rgba(0, 0, 0, 0.1);
+	box-shadow: -2px -2px 20px rgba(0, 0, 0, 0.1);
+	
+	overflow: hidden;
+}
+
+.row {
+	margin-left: 0px !important;
+}
+
+.row > [class*="span"] {
+  display: inline;
+  float: left;
+  margin-left: 0px !important;
+}
+
+#main {
+	background-color: #fff;	
+	min-height: 500px;
+	border-right: 1px solid #eee;
+}
+
+.sidebar {
+	padding: 20px;
+}
+.content-wrap {
+	padding: 20px;
 	display: none;
 }
 
-.content.active {
+.content-wrap::before, .content-wrap::after {
+	display: table;
+	content: "";
+	zoom: 1;
+}
+
+.content-wrap::after {
+	clear: both;
+}
+
+.content-wrap.active {
 	display: block;
 }
 
@@ -78,14 +124,8 @@ form .clearfix:after {
 /* Footer
 -------------------------------------------------- */
 .footer {
-  background-color: #eee;
   min-width: 940px;
-  padding: 30px 0;
-  text-shadow: 0 1px 0 #fff;
-  border-top: 1px solid #e5e5e5;
-  -webkit-box-shadow: inset 0 5px 15px rgba(0,0,0,.025);
-     -moz-box-shadow: inset 0 5px 15px rgba(0,0,0,.025);
-/*          box-shadow: inset 0 5px 15px rgba(0,0,0,.025);
+  padding: 20px 0;
 */}
 .footer p {
   color: #555;
